--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".activity.LoginActivity"></activity>
         <activity android:name=".activity.SettingActivity"></activity>
         <activity android:name=".activity.VideoActivity"></activity>
+        <activity android:name=".activity.VedioManegerActivity"></activity>
     </application>
 
 </manifest>
