--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".activity.SettingActivity"></activity>
         <activity android:name=".activity.VideoActivity"></activity>
         <activity android:name=".activity.VedioManegerActivity"></activity>
+        <activity android:name=".activity.QuestionContentActivity"></activity>
     </application>
 
 </manifest>
