--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".activity.VedioManegerActivity"></activity>
         <activity android:name=".activity.QuestionContentActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
+        <activity android:name=".activity.ChattingActivity"></activity>
     </application>
 
 </manifest>
