--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.example.a60440.collegestudent"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -31,10 +31,6 @@ dependencies {
     //ConverterFactory的Gson依赖包
     //    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'//ConverterFactory的String依赖包
     // required, enough for most devices.
-
-
-
-
     compile 'com.android.support:design:23.4.0'
     compile files('libs/retrofit-2.1.0.jar')
     compile 'com.android.support:design:23.4.0'
@@ -47,6 +43,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.android.support:support-vector-drawable:23.4.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.charonchui.vitamio:vitamio:4.2.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
