--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,14 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.example.a60440.collegestudent"
-        minSdkVersion 19
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -21,19 +23,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    //Retrofit2所需要的包
-    //    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    //ConverterFactory的Gson依赖包
-    //    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'//ConverterFactory的String依赖包
-    // required, enough for most devices.
+    compile 'com.android.support:multidex:1.0.0'
+
     compile 'com.android.support:design:23.4.0'
-    compile files('libs/retrofit-2.1.0.jar')
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
@@ -44,7 +40,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:23.4.0'
     testCompile 'junit:junit:4.12'
     compile 'com.charonchui.vitamio:vitamio:4.2.2'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    compile files('libs/butterknife-7.0.1.jar')
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
