--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="android.support.multidex.MultiDexApplication"
+        >
         <activity
             android:name=".activity.MainActivity"
             android:label="大学生端"
@@ -26,5 +28,5 @@
         <activity android:name=".activity.FriendMainActivity"></activity>
         <activity android:name=".activity.ChattingActivity"></activity>
     </application>
-
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
