--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,14 @@
         </activity>
         <activity android:name=".activity.LoginActivity"></activity>
         <activity android:name=".activity.SettingActivity"></activity>
-        <activity android:name=".activity.VideoActivity"></activity>
+        <activity android:name=".activity.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            ></activity>
         <activity android:name=".activity.VedioManegerActivity"></activity>
         <activity android:name=".activity.QuestionContentActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
         <activity android:name=".activity.ChattingActivity"></activity>
+        <activity android:name=".activity.SignupActivity"></activity>
     </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>
