--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:multidex:1.0.0'
-
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
@@ -41,6 +41,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.charonchui.vitamio:vitamio:4.2.2'
     compile files('libs/butterknife-7.0.1.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
