--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.charonchui.vitamio:vitamio:4.2.2'
     compile files('libs/butterknife-7.0.1.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.ms-square:expandableTextView:0.1.4'
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
