--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,15 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             ></activity>
         <activity android:name=".activity.VedioManegerActivity"></activity>
-        <activity android:name=".activity.QuestionContentActivity"></activity>
+        <activity android:name=".activity.AddAnswerActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
         <activity android:name=".activity.ChattingActivity"></activity>
         <activity android:name=".activity.SignupActivity"></activity>
+        <activity android:name=".activity.AddVideoActivity"></activity>
     </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"  />
+    <!-- 往SDCard写入数据权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"  />
 </manifest>
