--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile files('libs/butterknife-7.0.1.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
+
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
