--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets{
+        main{
+            jni.srcDirs = []
+            jniLibs.srcDirs=['libs']
+        }
+    }
 }
 
 dependencies {
@@ -44,7 +50,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
-
+    compile project(':IMKit')
+    compile project(':IMLib')
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
