--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name="com.example.a60440.collegestudent.application.App"
+
         >
         <activity
             android:name=".activity.MainActivity"
@@ -16,6 +17,17 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             >
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="io.rong.fast"
+                    android:pathPrefix="/conversationlist"
+                    android:scheme="rong" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -43,10 +55,39 @@
         <activity android:name=".activity.ChattingActivity"></activity>
         <activity android:name=".activity.SignupActivity"></activity>
         <activity android:name=".activity.AddVideoActivity"></activity>
+        <activity android:name=".activity.QuestionContentActivity"></activity>
+        <activity
+            android:name="activity.ConversationActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="io.rong.fast"
+                    android:pathPrefix="/conversation/"
+                    android:scheme="rong" />
+            </intent-filter>
+        </activity>
+   <provider
+       android:authorities="com.example.a60440.collegestudent.FileProvider"
+       android:exported="false"
+       android:name="android.support.v4.content.FileProvider"
+       android:grantUriPermissions="true">
+       <meta-data
+            android:resource="@xml/rc_file_path"
+           android:name="android.support.FILE_PROVIDER_PATHS" />
+
+   </provider>
+
     </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <!-- 在SDCard中创建与删除文件权限 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"  />
     <!-- 往SDCard写入数据权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"  />
+
 </manifest>
