--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
+    compile 'com.lcodecorex:tkrefreshlayout:1.0.5'
     compile project(':IMKit')
     compile project(':IMLib')
 }
