--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.example.a60440.collegestudent.application.App"
+        android:name="com.example.a60440.collegestudent.App"
 
         >
         <activity
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data
-                    android:host="io.rong.fast"
+                    android:host="com.example.a60440.collegestudent"
                     android:pathPrefix="/conversationlist"
                     android:scheme="rong" />
             </intent-filter>
@@ -35,11 +35,7 @@
                 android:resource="@xml/searchable"/>
         </activity>
         <activity android:name=".activity.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity android:name=".activity.SettingActivity"
@@ -52,27 +48,48 @@
         <activity android:name=".activity.VedioManegerActivity"></activity>
         <activity android:name=".activity.AddAnswerActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
-        <activity android:name=".activity.ChattingActivity"></activity>
         <activity android:name=".activity.SignupActivity"></activity>
         <activity android:name=".activity.AddVideoActivity"></activity>
         <activity android:name=".activity.QuestionContentActivity"></activity>
-        <activity
-            android:name="activity.ConversationActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-
+        <activity android:name=".activity.ContactActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
+        <activity android:name=".activity.FriendRequestActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
+        <activity android:name=".activity.PersonalInfoActivity"></activity>
+        <activity android:name=".activity.SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
+        <activity android:name=".activity.ChatActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
 
                 <data
-                    android:host="io.rong.fast"
+                    android:host="com.example.a60440.collegestudent"
                     android:pathPrefix="/conversation/"
-                    android:scheme="rong" />
+                    android:scheme="rong"/>
+            </intent-filter>
+
+
+        </activity>
+        <activity android:name=".activity.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-   <provider
+
+
+        <provider
        android:authorities="com.example.a60440.collegestudent.FileProvider"
        android:exported="false"
        android:name="android.support.v4.content.FileProvider"
