--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:configChanges="orientation|keyboardHidden|screenSize"
             ></activity>
-        <activity android:name=".activity.VedioManegerActivity"></activity>
+        <activity android:name=".activity.VedioManegerActivity"
+            android:label="大学生端"
+
+            ></activity>
         <activity android:name=".activity.AddAnswerActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
         <activity android:name=".activity.SignupActivity"></activity>
@@ -57,7 +60,9 @@
         <activity android:name=".activity.FriendRequestActivity"
             android:theme="@style/AppTheme.NoActionBar"
             ></activity>
-        <activity android:name=".activity.PersonalInfoActivity"></activity>
+        <activity android:name=".activity.PersonalInfoActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
         <activity android:name=".activity.SearchActivity"
             android:theme="@style/AppTheme.NoActionBar"
             ></activity>
@@ -86,6 +91,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.MyAnswersActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
+        <activity android:name=".activity.PairStudentActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+
+
         </activity>
 
 
