--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,6 @@
         <activity android:name=".activity.AddAnswerActivity"></activity>
         <activity android:name=".activity.FriendMainActivity"></activity>
         <activity android:name=".activity.SignupActivity"></activity>
-        <activity android:name=".activity.AddVideoActivity"></activity>
         <activity android:name=".activity.QuestionContentActivity"></activity>
         <activity android:name=".activity.ContactActivity"
             android:theme="@style/AppTheme.NoActionBar"
@@ -101,7 +100,12 @@
 
 
         </activity>
+        <activity android:name=".activity.StudentDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar">
 
+        </activity>
+        <activity android:name=".activity.UnpairStudentActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <provider
        android:authorities="com.example.a60440.collegestudent.FileProvider"
