--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,16 +45,17 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.android.support:support-vector-drawable:23.4.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.charonchui.vitamio:vitamio:4.2.2'
     compile files('libs/butterknife-7.0.1.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
     compile 'com.lcodecorex:tkrefreshlayout:1.0.5'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile "com.github.lzyzsd.randomcolor:library:1.0.0"
     compile project(':IMKit')
     compile project(':IMLib')
+    compile project(':InitActivity')
 }
 ext {
     compileSdkVersion = 23       // depending on your sdk version
