--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,9 @@
 
 
         </activity>
+        <activity android:name=".activity.StudentCourseInfo"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
 
         <activity
             android:name="com.mob.tools.MobUIShell"
